<resources>
    <string name="app_name">Minglr</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_bt_label">Settings</string>
    <string name="user_name">Name</string>
    <string name="user_phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="matches_bt_label">matches</string>
    <string name="send_label">Send</string>
    <string name="message">message</string>
    <string name="matches_activity_title">Matches</string>
    <string name="settings_activity_title">Settings</string>
    <string name="user_about">About me</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_make_post">Create a Post</string>
    <string name="feedbacktitle">Add a book to either sell or exchange:</string>
    <string name="feedbackname">Post Title</string>
    <string name="post_type">Select type of post:</string>
    <string name="post_type1">Sale</string>
    <string name="post_type2">Exchange</string>
    <string name="action_settings">Settings</string>
    <string name = "tag_description">Add tags to post:</string>
    <string name="tags">Type tags here, separated by commas</string>
    <string name="image">Book image</string>
    <string name= "price">Enter price of book</string>
</resources>
