<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".creation_post">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/kindlrlogo"
            android:layout_width="369dp"
            android:layout_height="99dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:src="@mipmap/ic_kindlrlogo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kindlrlogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:gravity="left"
            android:text="@string/feedbacktitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignEnd="@+id/SpinnerFeedback"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:ems="10"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/postType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignStart="@+id/price"
            android:layout_marginStart="2dp"
            android:layout_marginTop="57dp"
            android:gravity="left"
            android:text="@string/post_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/SpinnerFeedback"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/postType"
            android:layout_alignEnd="@+id/image_des"
            android:layout_alignParentTop="true"
            android:layout_marginTop="277dp"
            android:layout_marginEnd="4dp"
            android:entries="@array/posttypelist" />

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SpinnerFeedback"
            android:layout_alignEnd="@+id/tags"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="0dp"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceTitle"
            android:layout_alignStart="@+id/tags"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/tag_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postType"
            android:layout_alignStart="@+id/postType"
            android:layout_marginStart="1dp"
            android:layout_marginTop="155dp"
            android:gravity="start"
            android:text="@string/tag_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/image_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_des"
            android:layout_alignEnd="@+id/ivImage"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="11dp"
            android:gravity="start"
            android:text="Add image url:"
            android:textSize="18sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/tags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_des"
            android:layout_alignStart="@+id/imageUrl"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/tags" />

        <AutoCompleteTextView
            android:id="@+id/imageUrl"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_des"
            android:layout_alignStart="@+id/ivImage"
            android:layout_marginStart="-9dp"
            android:layout_marginTop="98dp"
            android:ems="10"
            android:hint="Type image url" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="351dp"
            android:layout_height="38dp"
            android:layout_below="@+id/tags"
            android:layout_alignEnd="@+id/name"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_launcher_foreground" />

        <Button
            android:id="@+id/SelectPhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="Select Photo" />


        <Button
            android:id="@+id/PostBookButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SelectPhotoButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Post Book" />

    </RelativeLayout>

</ScrollView>